--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -11,7 +11,7 @@ idna==2.5
 imagesize==0.7.1
 pytz==2017.2
 recommonmark==0.4.0
-requests==2.18.2
+requests>=2.20.0
 setuptools==36.2.4
 six==1.10.0
 snowballstemmer==1.2.1
